--- a/src/components/login.css
+++ b/src/components/login.css
@@ -1,4 +1,4 @@
-.base-container {
+/* .base-container {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -54,4 +54,4 @@
 }
 .base-container .footer {
   margin-top: 3em;
-}
+} */
